# rust-user-authentication

./: .env  .gitignore  Cargo.toml  DockerFile  README.md  settings.toml  setup.sh  setup.sql
src/: db.rs  handler.rs  jwt.rs  logic.rs  obj.rs
