[package]
name = "jwt-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jwt"
path = "./src/jwt.rs"

[[bin]]
name = "pg"
path = "./src/testdb.rs"

[dependencies]

tokio = { version = "1.15.0", features = ["full"] }
once_cell = "1.12.0"
headers = "0.3.7"

json = "0.12.4"

tempdir = "0.3.5"
url = "2.2.2"

sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "any", "postgres"] }
sqlx-core = "0.6.0"

axum = { version = "0.5.9", features = ["headers"] }
tower = "0.4.13"
tower-layer = "0.3.1"
config = "0.13.1"

digest = "0.10.3"
blake2 = "0.10.4"

serde = { version = "1.0.133",  features = ["derive"] }
serde_json = "1.0.73"

hyper = "0.14.16"

jsonwebtoken = "8.1.1"

couch_rs = "0.8.34"

tracing = "0.1.29"	
tracing-subscriber = { version = "0.3", features = ["tracing"] }

uuid = { version = "1.1.2", features = ["serde", "v4"] }

bytes = "1.1.0"